--- a/capstone_frontend-main/src/app/login/login.component.html
+++ b/capstone_frontend-main/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-container"> 
+<div class="login-container">
   <div class="login-box">
     <h2>Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
@@ -30,7 +30,7 @@
         <span class="error">Please select a role.</span>
       </div>
 
-      <!-- Email Field (Updated from username) -->
+      <!-- Email Field -->
       <div class="form-group">
         <label for="email">Email</label>
         <input
@@ -67,11 +67,10 @@
 
     <!-- Registration Link (Conditional for User and Constructor Role) -->
     <p class="routerLink" *ngIf="loginForm.get('role')?.value === 'user'">
-      If new user, register here <a routerLink="/register">Register</a>
+      If new user,  <a (click)="navigateToRegister('user')">Register here</a>
     </p>
     <p class="routerLink" *ngIf="loginForm.get('role')?.value === 'constructor'">
-      If new constructor, register here <a routerLink="/register">Register</a>
+      If new constructor,  <a (click)="navigateToRegister('constructor')">Register here</a>
     </p>
-    
   </div>
 </div>
